--- a/netBeans/EdunovaApp/src/main/java/edunova/view/Autorizacija.form
+++ b/netBeans/EdunovaApp/src/main/java/edunova/view/Autorizacija.form
@@ -32,7 +32,7 @@
                           <Component id="txtEmail" min="-2" pref="155" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="0" min="-2" pref="72" max="-2" attributes="0"/>
                           <Component id="txtLozinka" alignment="0" min="-2" pref="225" max="-2" attributes="0"/>
-                          <Component id="lblEmailPoruka" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtEmailPoruka" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -50,7 +50,7 @@
               <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
-              <Component id="lblEmailPoruka" min="-2" max="-2" attributes="0"/>
+              <Component id="txtEmailPoruka" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
               <Component id="txtEmail" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
@@ -59,7 +59,7 @@
               <Component id="txtLozinka" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
               <Component id="btnAutoriziraj" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="48" max="32767" attributes="0"/>
+              <EmptySpace pref="64" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -71,6 +71,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtEmail">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="oper@edunova.hr"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtEmailActionPerformed"/>
       </Events>
@@ -89,14 +92,18 @@
       </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtLozinka">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="oper"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtLozinkaActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtLozinkaKeyPressed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="lblEmailPoruka">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel3"/>
-      </Properties>
+    <Component class="javax.swing.JLabel" name="txtEmailPoruka">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtEmailPorukaKeyPressed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
