--- a/netBeans/FinalApp/src/main/java/autokuca/view/Izbornik.form
+++ b/netBeans/FinalApp/src/main/java/autokuca/view/Izbornik.form
@@ -18,11 +18,17 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="O aplikaciji"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Izlaz"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
