--- a/netBeans/FinalApp/src/main/java/autokuca/view/Izbornik.form
+++ b/netBeans/FinalApp/src/main/java/autokuca/view/Izbornik.form
@@ -8,6 +8,16 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Programi"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem4">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Kupac"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem4ActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
