--- a/netBeans/EdunovaApp/src/main/java/edunova/view/ProzorGrupa.form
+++ b/netBeans/EdunovaApp/src/main/java/edunova/view/ProzorGrupa.form
@@ -236,6 +236,9 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbSmjeroviActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Smjer&gt;"/>
       </AuxValues>
