--- a/netBeans/AutokucaApp/src/main/java/autokuca/view/ProzorVozilo.form
+++ b/netBeans/AutokucaApp/src/main/java/autokuca/view/ProzorVozilo.form
@@ -28,11 +28,7 @@
               <Component id="jScrollPane1" min="-2" pref="354" max="-2" attributes="0"/>
               <EmptySpace pref="148" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="txtCijena" max="32767" attributes="0"/>
-                      <Component id="jLabel2" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
-                      <Component id="txtProdajnoMjesto" alignment="0" min="-2" pref="174" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="txtCijena" min="-2" pref="174" max="-2" attributes="0"/>
                   <Component id="jLabel3" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
                   <Component id="txtProizvodac" alignment="0" min="-2" pref="174" max="-2" attributes="0"/>
                   <Component id="jLabel4" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
@@ -40,6 +36,7 @@
                   <Component id="jLabel1" min="-2" pref="104" max="-2" attributes="0"/>
                   <Component id="jLabel5" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
                   <Component id="txtVIN" alignment="0" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="cmbProdajnoMjesto" alignment="0" min="-2" pref="156" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
           </Group>
@@ -52,11 +49,9 @@
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="txtCijena" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="txtProdajnoMjesto" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="cmbProdajnoMjesto" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="txtProizvodac" min="-2" max="-2" attributes="0"/>
@@ -103,13 +98,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtCijena">
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel2">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Prodajno Mjesto"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txtProdajnoMjesto">
-    </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="text" type="java.lang.String" value="Proizvo&#x111;a&#x10d;"/>
@@ -130,6 +118,19 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtVIN">
+    </Component>
+    <Component class="javax.swing.JComboBox" name="cmbProdajnoMjesto">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="0"/>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbProdajnoMjestoActionPerformed"/>
+      </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;ProdajnoMjesto&gt;"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
